--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,10 @@
     rel="stylesheet"
     href="https://unpkg.com/bootstrap@4.6.0/dist/css/bootstrap.min.css"
   />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body>
+<body class="mat-typography">
   <app-root></app-root>
 </body>
 </html>
